[package]
name = "cloud_fade"
version = "0.1.0"
authors = ["boring <boringthegod@tutanota.com>"]
edition = "2021"
description = "Unmask real IP address of a domain hidden behind Cloudflare by IPs bruteforcing"
repository = "https://github.com/boringthegod/CloudFade"
readme = "README.md"
license = "GPL-3.0-only"

[[bin]]
name = "cloud_fade"
path = "src/main.rs"

[dependencies]
clap = "2.33"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "default-tls", "rustls-tls"] }
tokio = { version = "1", features = ["full" ] }
futures = "0.3"
rand = "0.8"
num_cpus = "1.13"
indicatif = "0.17"
colored = "2.0"