[package]
name = "cloud_fade"
version = "0.1.6"
authors = ["boring <boringthegod@tutanota.com>"]
edition = "2021"
description = "Unmask real IP address of a domain hidden behind Cloudflare by IPs bruteforcing"
repository = "https://github.com/boringthegod/CloudFade"
readme = "README.md"
license = "GPL-3.0-only"

[[bin]]
name = "cloud_fade"
path = "src/main.rs"

[dependencies]
clap = "2.33"
futures = "0.3"
indicatif = "0.16"
num_cpus = "1.13"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process"] }
colored = "2.0"
scraper = "0.14"
rquest = "0.25"
flate2 = "1.0"
regex = "1.5"
ipnet = "2.3"
